@@ -7,8 +7,10 @@ import org.lwjgl.opengl.GL11;
 
 import com.artemis.Aspect;
 import com.artemis.ComponentMapper;
+import com.artemis.annotations.Wire;
 import com.artemis.systems.IteratingSystem;
 import com.badlogic.gdx.graphics.Camera;
+import com.badlogic.gdx.graphics.Color;
 import com.badlogic.gdx.graphics.g2d.Sprite;
 import com.badlogic.gdx.graphics.g2d.SpriteBatch;
 import com.badlogic.gdx.math.Vector3;
@@ -16,6 +18,7 @@ import com.badlogic.gdx.math.Vector3;
 import de.vatterger.engine.handler.asset.AtlasHandler;
 import de.vatterger.engine.util.Math2D;
 import de.vatterger.engine.util.Metrics;
+import de.vatterger.engine.util.Profiler;
 import de.vatterger.game.components.gameobject.AbsolutePosition;
 import de.vatterger.game.components.gameobject.AbsoluteRotation;
 import de.vatterger.game.components.gameobject.CullDistance;
@@ -37,9 +40,10 @@ public class SpriteRenderSystem extends IteratingSystem {
 	private ComponentMapper<SpriteDrawMode>		sdmm;
 	private ComponentMapper<SpriteFrame>		sfm;
 
-	private SpriteBatch spriteBatch;
-	
+	@Wire(name="camera")
 	private Camera camera;
+	
+	private SpriteBatch spriteBatch;
 	
 	private Vector3 v0 = new Vector3();
 	
@@ -50,12 +54,17 @@ public class SpriteRenderSystem extends IteratingSystem {
 	
 	//ShaderProgram program;
 	
+	private Profiler profiler = new Profiler("SpriteRender");
+	
 	@SuppressWarnings("unchecked")
-	public SpriteRenderSystem(Camera camera) {
+	public SpriteRenderSystem() {
+		
 		super(Aspect.all(SpriteID.class, AbsolutePosition.class, SpriteLayer.class).exclude(Culled.class));
-		this.camera = camera;
+		
 		this.spriteBatch = new SpriteBatch();
 		
+		GraphicalProfilerSystem.registerProfiler("SpriteRender", Color.CYAN, profiler);
+
 		/*program =  new ShaderProgram(Gdx.files.internal("assets/shader/terrain.vert"), Gdx.files.internal("assets/shader/terrain.frag"));
 		if (program.isCompiled()) {
 			spriteBatch.setShader(program);
@@ -82,14 +91,16 @@ public class SpriteRenderSystem extends IteratingSystem {
 	
 	@Override
 	protected void begin() {
+		
+		profiler.start();
+		
 		renderArrayPointer = 0;
 		
 		if(renderArray.length < renderSize || renderArray.length > renderSize*4) {
 			renderArray = new Integer[renderSize*2];
 		}
 		
-		Integer mo = new Integer(-1);
-		Arrays.fill(renderArray, mo);
+		Arrays.fill(renderArray, Integer.valueOf(-1));
 		
 		spriteBatch.setProjectionMatrix(camera.combined);
 		spriteBatch.begin();
@@ -98,7 +109,7 @@ public class SpriteRenderSystem extends IteratingSystem {
 	@Override
 	protected void process(int e) {
 		if(!cdm.has(e) || cdm.get(e).visible) {
-			renderArray[renderArrayPointer++] = new Integer(e);
+			renderArray[renderArrayPointer++] = Integer.valueOf(e);
 		}
 	}
 	
@@ -126,18 +137,21 @@ public class SpriteRenderSystem extends IteratingSystem {
 	
 	@Override
 	protected void end() {
+		
 		Arrays.sort(renderArray, 0, renderArrayPointer, yzcomp);
+		
 		for (int r = 0; r < renderArray.length && renderArray[r] != -1; r++) {
-			int e = renderArray[r];
 			
-			Vector3 pos = pm.get(e).position;
-			SpriteID sidc = sim.get(e);
-			AbsoluteRotation sr = srm.getSafe(e, null);
-			SpriteFrame sf = sfm.getSafe(e, null);
+			final int e = renderArray[r];
+			
+			final Vector3 pos = pm.get(e).position;
+			final SpriteID sidc = sim.get(e);
+			final AbsoluteRotation sr = srm.getSafe(e, null);
+			final SpriteFrame sf = sfm.getSafe(e, null);
 			
 			v0.set(pos);
 			
-			Sprite sprite;
+			final Sprite sprite;
 			
 			if(sr == null) {
 				if(sf == null) {
@@ -165,11 +179,12 @@ public class SpriteRenderSystem extends IteratingSystem {
 				sprite.setScale(sm.get(e).scale);
 			}
 			
-			float sx =  v0.x							-	sprite.getWidth() /2f;
-			float sy = (v0.y + v0.z) * Metrics.ymodp	-	sprite.getHeight()/2f;
+			final float sx =  v0.x							-	sprite.getWidth() /2f;
+			final float sy = (v0.y + v0.z) * Metrics.ymodp	-	sprite.getHeight()/2f;
 			sprite.setPosition(sx, sy);
 			
 			if(sdmm.has(e)) {
+				
 				SpriteDrawMode sdm = sdmm.get(e);
 				
 				sprite.setColor(sdm.color);
@@ -177,12 +192,17 @@ public class SpriteRenderSystem extends IteratingSystem {
 				sprite.draw(spriteBatch);
 				
 				spriteBatch.setBlendFunction(GL11.GL_SRC_ALPHA, GL11.GL_ONE_MINUS_SRC_ALPHA);
+				
 			} else {
 				sprite.draw(spriteBatch);
 			}
+			
 			sprite.setRotation(0f);
 		}
+		
 		spriteBatch.end();
+		
+		profiler.stop();
 	}
 	
 	@Override
